policies/run-as-nonroot/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: run-as-nonroot-pod
  namespace: policy-test
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
  securityContext:
    runAsNonRoot: false
