policies/run-as-nonroot/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-run-as-nonroot-pod-namespace-optout-warn
spec:
  policyName: check-run-as-nonroot-pod
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - restricted
      - key: run-as-nonroot-pod.pss.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-run-as-nonroot-pod-namespace-optin-warn
spec:
  policyName: check-run-as-nonroot-pod
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: run-as-nonroot-pod.pss.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-run-as-nonroot-pod-namespace-optout-audit
spec:
  policyName: check-run-as-nonroot-pod
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - restricted
      - key: run-as-nonroot-pod.pss.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-run-as-nonroot-pod-namespace-optin-audit
spec:
  policyName: check-run-as-nonroot-pod
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: run-as-nonroot-pod.pss.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-run-as-nonroot-pod-namespace-optout-deny
spec:
  policyName: check-run-as-nonroot-pod
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - restricted
      - key: run-as-nonroot-pod.pss.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-run-as-nonroot-pod-namespace-optin-deny
spec:
  policyName: check-run-as-nonroot-pod
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: run-as-nonroot-pod.pss.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
